literally took out a single .

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "express-session": "^1.17.1",
       "handlebars": "^4.7.6",
       "mysql2": "^2.2.5",
-      "sequelize": "^6.3.5"
+      "sequelize": "^6.3.5",
+      "formidable": "^1.2.2"
     }
   }
